--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-<title>纵有万般思念-小孔创新</title>
+<!--本源码由白茶、更新，感谢使用-->
+    <title>纵有万般思念-小孔创新</title>
     <style>
         body {
             background-color: #eee;
@@ -260,4 +261,3 @@ transform: translateX(-50%) translateY(0%);background-color:rgba(0, 0, 0, 0.7);z
 <audio autoplay="" loop=""><source src=""></audio></div>
 </body>
 </html>
-
