--- a/index.html
+++ b/index.html
@@ -261,3 +261,4 @@ transform: translateX(-50%) translateY(0%);background-color:rgba(0, 0, 0, 0.7);z
 <audio autoplay="" loop=""><source src=""></audio></div>
 </body>
 </html>
+<footer>版权所有 © 2025-2026, 版权归孔一臣所有</footer>
