--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <div class="receipt">
-      <h2 class="receipt__title">致LJJ：</h2>
+      <h2 class="receipt__title">致L：</h2>
       <p class="receipt__subtitle">此小纸条非常重要，由龙门镖局亲自押运。</p>
       <div class="textcenter">
         <p style="margin-top: 10px;">一尺深红胜曲尘，天生旧物不如新。</p>
@@ -35,4 +35,5 @@
       </p>
 <p>© 2025-2026 版权归小孔创新所有. All rights reserved.</p>
     </div>
+
   </div>
